# subsketeer

./: .gitignore  README.md  com.github.leggettc18.subsketeer.yml  meson.build
data/: meson.build  subsketeer.appdata.xml.in  subsketeer.desktop.in
po/: POTFILES  com.github.leggettc18.subsketeer.pot  de.po  es.po
src/: Application.vala  Database.vala  MainWindow.vala
src/Objects/: Category.vala  Subscription.vala
